@@ -2,7 +2,7 @@
 // win32res.rc
 // Win32 resource file for Hexen II
 //
-// $Id: win32res.rc,v 1.6 2010-10-30 11:33:15 sezero Exp $
+// $Id$
 //
 
 #include <afxres.h>
@@ -35,19 +35,6 @@ FONT 16, "Times New Roman", 0, 0, 0x1
 BEGIN
     CONTROL 112, IDC_STATIC, "Static", SS_BITMAP | SS_REALSIZEIMAGE, 0, 0, 167, 28
 END
-
-#include "h2config.h"
-#if !USE_HEXEN2_PALTEX_CODE
-IDD_PROGRESS DIALOGEX 0, 0, 333, 75
-STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_3DLOOK | DS_CENTER | WS_POPUP | WS_VISIBLE
-EXSTYLE WS_EX_TOOLWINDOW | WS_EX_CLIENTEDGE
-FONT 8, "MS Sans Serif", 0, 0, 0x1
-BEGIN
-    LTEXT "Creating 15 bit inverse palette.  This is only done once, so just be patient for the next 30-60 seconds.", IDC_STATIC, 7, 51, 319, 10
-    CONTROL 112, IDC_STATIC, "Static", SS_BITMAP | SS_REALSIZEIMAGE, 0, 0, 333, 49
-    CONTROL "Progress1", IDC_PROGRESS, "msctls_progress32", 0x0, 7, 61, 319, 11
-END
-#endif	// !USE_HEXEN2_PALTEX_CODE
 
 // Bitmap
 IDB_HXBITMAP BITMAP DISCARDABLE SPLASH_BMP
